package cn.snwalker.design.structural.proxy.CGLib_proxy;

public class Client {
    public static void main(String[] args) {
        // 创建代理工厂对象
        ProxyFactory proxyFactory = new ProxyFactory();
        // 获取代理对象
        TrainStation proxyObject = proxyFactory.getProxyObject();

        proxyObject.sell();
    }
}
