package cn.snwalker.design.structural.proxy.CGLib_proxy;

public class TrainStation {
    public void sell() {
        System.out.println("火车站卖票");
    }
}
